create, view, add, delete, edit posts

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,9 +17,8 @@
   </a>
 
   <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-    <li><a href="{% url 'home' %}" class="nav-link px-2 link-secondary">Головна сторінка</a></li>
+    <li><a href="{% url 'home' %}" class="nav-link px-2 link-dark">Головна сторінка</a></li>
     <li><a href="{% url 'add' %}" class="nav-link px-2 link-dark">Додати запис</a></li>
-{#    <li><a href="{% url 'edit' %}" class="nav-link px-2 link-dark">Редагування</a></li>#}
     <li><a href="admin" class="nav-link px-2 link-dark">Admin</a></li>
     <li><a href="#" class="nav-link px-2 link-dark">About</a></li>
   </ul>
